fix the alignment

--- a/client/src/pages/Registration.css
+++ b/client/src/pages/Registration.css
@@ -70,7 +70,7 @@ h1 {
 	padding: 1rem;
 	border-radius: 10px;
 	width: 90%;
-	margin-left: 0.5rem;
+	
 }
 
 select {
